loading elements and cleaning. Add more test files, prepare for proper templating.

--- a/TODO
+++ b/TODO
@@ -2,3 +2,4 @@
 [ ] Handlebars.js integration?
 [ ] More example app mockups?
 [ ] PhantomJS based tests?
+[ ] Get this motherfucking SVG out of the motherfucking HTML.
